# lab-pixel-pulse

./: .editorconfig  .gitignore  CMakeLists.txt
resources/assets/scenes/: demo.json
resources/wasm/: index.html  serve.js
scripts/: build.ps1  build.sh
src/: Logger.cpp  Logger.h  RenderPassDescriptor.h  StringTools.cpp  StringTools.h  Utilities.cpp  Utilities.h  main.cpp
src/Assets/: AssetRegistry.cpp  AssetRegistry.h  IAsset.cpp  IAsset.h  Image.cpp  Image.h
src/Entities/: PlayerEntity.cpp  PlayerEntity.h
src/Entities/Enemy/: EnemyEntity.cpp  EnemyEntity.h
src/Entities/Floor/: FloorEntity.cpp  FloorEntity.h
src/Entities/Player/: PlayerEntity.cpp  PlayerEntity.h
src/Game/: EntityLibrary.cpp  EntityLibrary.h  IEntity.h  Input.cpp  Input.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderPassDescriptor.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneNode.cpp  SceneNode.h  Sprite.cpp  Sprite.h  UpdateEventPayload.h
src/Game/Events/: AttachEventPayload.h  StartEventPayload.h  UpdateEventPayload.h
src/Libraries/: JSON.h  Libraries.h  SDL.h  stb.h
src/Math/: Vector2.h
src/Physics/: Collider.cpp  Collider.h  CollisionListener.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
src/Platform/: Memory.cpp  Memory.h  Platform.h  Std.h  String.cpp  String.h
